welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:5: error: not found: value &&
  if (a!=b)&&(a!=c)&&(b!=c){
           ^greenTicket:5: error: Boolean does not take parameters
  if (a!=b)&&(a!=c)&&(b!=c){
                           ^